--- a/SCApp/Views/Shop/Cart.cshtml
+++ b/SCApp/Views/Shop/Cart.cshtml
@@ -1,53 +1,7 @@
-﻿@model SCApp.ViewModels.ShoppingCartViewModel
+﻿<h2>Shopping Cart</h2>
 
-<h2>Shopping Cart</h2>
+<div id="divCart">
+    @{Html.RenderAction("CartPartial", "Shop");}
+</div>
 
-@if (Model.Items.Any())
-{
 
-    <table class="table">
-        <tr>
-            <th>
-                Item
-            </th>
-            <th>
-                Price
-            </th>
-            <th>
-                Quantity
-            </th>
-            <th>
-                Total
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model.Items)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ItemName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnitPrice)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LineTotal)
-                </td>
-                <td>
-                    @Html.ActionLink("Remove", "RemoveFromCart", new { itemId = item.ItemId })
-                </td>
-            </tr>
-        }
-
-    </table>
-}
-else
-{
-    <div>No items in cart</div>
-}
-
-<div>Total : <span><b>@Model.Total</b></span></div>
